# wallrift

./: CMakeLists.txt  LICENSE  README.md  \
include/: ext-idle-notify-v1-client-protocol.h  file.h  gl.h  log.h  monitor.h  wayland.h
shaders/: wallpaper.frag  wallpaper.vert
src/: cli.c  daemon.c  ext-idle-notify-v1-protocol.c  file.c  gl.c  main.c  utils.c  wayland.c
